<resources>
    <string name="app_name">Calculadora</string>
    <string name="tvCalculadora"> Calculadora </string>
    <string name="tvEnunciado">Ingrese dos numeros</string>
    <string name="etNumero1">Primer número</string>
    <string name="etNumero2">Segundo número</string>
    <string name="btnSuma">Suma</string>
    <string name="btnResta">Resta</string>
    <string name="btnDivision">División</string>
    <string name="btnMultiplicacion">Multiplición</string>
    <string name="btnLimpiar">Limpiar</string>
</resources>